# rja

./: Cargo.toml  README.md
src/: main.rs  model.rs
templates/: index.html.tera
