[package]
name = "rja"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
chrono = "0.4.19"
rand = "0.8"
fake = { version = "2.4.3", features=["derive"] }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["tera"] }
serde = "1.0.137"